# blackpill-stm32-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  main.c  main.cpp  stm32f401.ioc  stm32f4xx_hal_conf.h
Core/Src/: main.c
bsp/: blackpill.h
bsp/blackpill/: blackpill.c  blackpill.h
ethernet/: CMakeLists.txt  wizchip.h  wizchip_port.c  wizchip_port.h
